--- a/brew_crew/pubspec.yaml
+++ b/brew_crew/pubspec.yaml
@@ -2,7 +2,7 @@ name: brew_crew
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: ">=2.19.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,14 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  
 
-
-# Firebase DataBase
+  # Firebase DataBase
   firebase_auth: ^4.2.6
   provider: ^6.0.5
   flutter_speed_dial: ^6.2.0
@@ -50,7 +47,7 @@ dependencies:
   file_picker: ^5.2.5
   image_picker: ^0.8.6+3
   firebase_core: ^2.7.1
-
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +65,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
