--- a/brew_crew/pubspec.yaml
+++ b/brew_crew/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   image_picker: ^0.8.6+3
   firebase_core: ^2.7.1
   url_launcher: ^6.0.3
+  another_stepper: ^1.2.2
+
 
 dev_dependencies:
   flutter_test:
