--- a/brew_crew/pubspec.yaml
+++ b/brew_crew/pubspec.yaml
@@ -52,7 +52,6 @@ dependencies:
   firebase_storage: ^11.0.16
   uuid: ^3.0.7
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -90,17 +89,34 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Regular.ttf
+          style: normal
+        - asset: fonts/Montserrat-Bold.ttf
+          weight: 700
+        - asset: fonts/Montserrat-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Montserrat-Medium.ttf
+          weight: 500
+    - family: Nunito
+      fonts:
+        - asset: fonts/Nunito-Regular.ttf
+          style: normal
+        - asset: fonts/Nunito-Bold.ttf
+          weight: 700
+        - asset: fonts/Nunito-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Nunito-Medium.ttf
+          weight: 500
+    - family: Aeonik
+      fonts:
+        - asset: fonts/Aeonik-Regular.otf
+          style: normal
+        - asset: fonts/Aeonik-Bold.otf
+          weight: 700
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
